<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/venderbg1"
    tools:context=".Customer_Signup">

    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/name"
        android:inputType="textPersonName"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/phone"
        android:inputType="phone"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstname" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/email"
        android:inputType="textEmailAddress"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/dob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/dob"
        android:inputType="date"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/address"
        android:inputType="textPersonName"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signupasCus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob" />

    <Button
        android:id="@+id/signupasCus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:fontFamily="monospace"
        android:text="@string/signup"
        android:textStyle="bold"
        android:background="@color/mycolor"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address"/>


</android.support.constraint.ConstraintLayout>